--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "react-router-dom": "^6.17.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
