--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,45 @@
 server {
+  # Define que o Nginx irá escutar na porta 80 (HTTP)
   listen 80;
+
+  # Aceita qualquer nome de domínio (default server)
   server_name _;
 
+  # Diretório raiz onde ficam os arquivos estáticos do frontend
   root /usr/share/nginx/html;
+
+  # Arquivo padrão carregado ao acessar a raiz
   index index.html;
 
+  # Configuração principal para aplicações SPA (React, Vue, etc.)
   location / {
+    # Tenta servir o arquivo requisitado.
+    # Se não existir, redireciona para o index.html
+    # (necessário para o funcionamento das rotas do frontend)
     try_files $uri $uri/ /index.html;
   }
 
+  # Proxy reverso para requisições da API
   location /api/ {
+    # Encaminha as requisições para o backend (container api na porta 8080)
     proxy_pass http://api:8080/;
+
+    # Repassa o host original da requisição
     proxy_set_header Host $host;
+
+    # Repassa o IP real do cliente para o backend
     proxy_set_header X-Real-IP $remote_addr;
   }
 
-  # Proxy login endpoint to backend
+  # Proxy específico para o endpoint de login
   location = /login {
+    # Encaminha requisições de login diretamente para o backend
     proxy_pass http://api:8080/login;
+
+    # Repassa o host original
     proxy_set_header Host $host;
+
+    # Repassa o IP real do cliente
     proxy_set_header X-Real-IP $remote_addr;
   }
 }
