--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.4",
+    "jwt-decode": "^3.1.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "rxjs": "^7.8.0",
     "react-router-dom": "^6.17.0",
-    "jwt-decode": "^3.1.2"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -22,15 +23,15 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "vite": "^7.2.4"
   }
 }
