nginx: preserve /api prefix in proxy_pass to backend (fix image proxy 403)

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,7 +22,9 @@ server {
   # Proxy reverso para requisições da API
   location /api/ {
     # Encaminha as requisições para o backend (container api na porta 8080)
-    proxy_pass http://api:8080/;
+    # Mantém o caminho original (inclui o prefixo /api) para que o backend receba
+    # /api/... e as regras de segurança coincidam corretamente.
+    proxy_pass http://api:8080;
 
     # Repassa o host original da requisição
     proxy_set_header Host $host;
