feat: cria upload e gerenciamento de arquivos no S3

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -86,6 +91,20 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.64</version>
 		</dependency>
+		<!-- MinIO Java SDK, usado para gerar presigned URLs quando disponível -->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.6.0</version>
+		</dependency>
+
+		<!-- OkHttp (transitive dependency required by MinIO SDK) -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
