--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,13 @@
 			<version>4.11.0</version>
 		</dependency>
 
+		<!-- Springdoc OpenAPI (Swagger UI) -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -150,7 +157,8 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
-	</build>
+
+        </plugins>
+    </build>
 
 </project>
