feat: criar endpoint regional

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- WebFlux/WebClient for calling external HTTP APIs -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
 		<!-- WebSocket support for real-time notifications -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
