--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.17.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
