--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.17.0",
     "rxjs": "^7.8.0",
-    "sweetalert2": "^11.7.27"
+    "sweetalert2": "^11.7.27",
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
