fix: corrigir toast do WebSocket no frontend

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -32,4 +32,18 @@ server {
     # Repassa o IP real do cliente para o backend
     proxy_set_header X-Real-IP $remote_addr;
   }
+
+  # Proxy para conexões WebSocket (upgrade) utilizadas para notificações em tempo real
+  location /ws/ {
+    proxy_pass http://api:8080;
+
+    # Habilita suporte a WebSocket (headers de upgrade)
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+
+    # Repassa o host e IP original
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+  }
 }
